WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173731
REGRESSION(
r214712
): Infinite recursion in RenderTable::layout in paginated mode
https://bugs.webkit.org/show_bug.cgi?id=173731
Summary
REGRESSION(r214712): Infinite recursion in RenderTable::layout in paginated mode
alan
Reported
2017-06-22 13:14:26 PDT
we should get stabilized at some point but sectionMoved is always true.
Attachments
Patch
(3.58 KB, patch)
2017-06-22 13:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-06-22 13:14:38 PDT
rdar://problem/32237775
alan
Comment 2
2017-06-22 13:29:54 PDT
Created
attachment 313654
[details]
Patch
WebKit Commit Bot
Comment 3
2017-06-22 14:55:41 PDT
Comment on
attachment 313654
[details]
Patch Clearing flags on attachment: 313654 Committed
r218721
: <
http://trac.webkit.org/changeset/218721
>
WebKit Commit Bot
Comment 4
2017-06-22 14:55:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug