REGRESSION(r214712): Infinite recursion in RenderTable::layout in paginated mode https://bugs.webkit.org/show_bug.cgi?id=173731 <rdar://problem/32237775>

Reviewed by Antti Koivisto.

Source/WebCore:

We should just skip bottom captions to check if section is moved, since they don't affect
the section position (bottom <caption> is preceded by <tfoot>).

Test: fast/table/caption-bottom-with-pagination.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):

LayoutTests:

* fast/table/caption-bottom-with-pagination-expected.txt: Added.
* fast/table/caption-bottom-with-pagination.html: Added.


Canonical link: https://commits.webkit.org/190604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218721 268f45cc-cd09-0410-ab3c-d52691b4dbfc